# FourierOptionPricing

./: .gitignore  Pezzi di Codice.coffee  README.md  STRUCTURE.md  config.json  cpp_pricer.cp312-win_amd64.pyd  df.py  fft_pricer_analysis.ipynb  fft_visualization.ipynb  generate_figs.py  numerical_and_performance_validation.ipynb  option_chain_SPY.csv  pyproject.toml  sensitivity_study.ipynb  setup_repo_structure.py  theoretical_validation.py
cpp_pricer/: fft_pricer.cpp  setup.py
data/: data_options.csv  heston_synthetic_data.parquet  option.py  spy_clean.csv  spy_options_CLEANED_20251201.parquet
engine/: CMakeLists.txt  fft_pricer.cpp  setup.py
examples/: adaptive_dampening&stability.ipynb  analyticity_strip_comparison.py  bs_calibration.py  data_pipeline.py  empirical_data_pipeline.py  fft_error_analysis.py  paper_figures.py  paper_main_figures.py  paper_technical_figures.py  robust_analysis.py  theoretical_validation.py  volatility_smile.py
fourier_options/: __init__.py  calibration.py  characteristic_functions.py  fft_pricer.py
notebooks/: analytical_validation.ipynb  delta_comparison.ipynb  fft_visualization.ipynb  numerical_and_performance_validation.ipynb  sensitivity_study.ipynb
outputs/: empirical_data_quality_report.json
paper/: generate_figures.py  paper_figures.ipynb  section_greeks.tex
paper/img/: 1_notes.tx
scripts/: Error_Time_Module.py  Grid_Module.py  __init__.py
src/: bs_calibration_experiment.py  calibration_loss.py  characteristic_functions.py  delta_comparison.py  error_time_module.py  fft_pricer.py  fit.py  fourier_integral.py  gpu_test.py  greeks_fft.py  greeks_fft_plot.py  greeks_integrands.py  synthetic_data_gen.py  validation.py
src/fourier_options/: __init__.py
src/fourier_options/calibration/: __init__.py  loss.py  splits.py
src/fourier_options/data/: __init__.py  arbitrage.py  fetcher.py  filters.py  pipeline.py
src/fourier_options/greeks/: fft.py  integrands.py
src/fourier_options/pricing/: fft_pricer.py  fourier_integral.py
src/fourieroptionpricing.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_greeks.py  test_pricer.py
(+1 files in other folders)
