[project]
name = "fourieroptionpricing"
version = "0.1.0"
description = "FFT-based Option Pricing and Heston Model Calibration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
data = ["yfinance>=0.2.0"]

[tool.setuptools.packages.find]
where = ["src"]
