[build-system]
requires = ["scikit-build-core>=0.9", "pybind11>=2.11"]
build-backend = "scikit_build_core.build"

[project]
name = "fourieroptionpricing"
version = "1.0.0"
description = "FFT-based Option Pricing and Calibration (Carr-Madan, Heston, Merton, VG)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "scipy>=1.16.3",
    "yfinance>=1.2.0",
    "tqdm>=4.0.0",
]

[tool.scikit-build]
# CMakeLists.txt lives in engine/, sources reference fft_pricer.cpp relatively
cmake.source-dir = "engine"
# Python packages to bundle in the wheel
wheel.packages = ["fourier_options"]
